fix window visible style

--- a/src/containers/Editor/styles.scss
+++ b/src/containers/Editor/styles.scss
@@ -10,6 +10,7 @@
     margin: 0;
     font-size: 21px;
     font-family: monospace;
+    background: transparent;
   }
 }
 
